Added a few assets

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "godotTools.editorPath.godot4": "c:\\Users\\smrro\\Documents\\Godot\\Godot_v4.2.1-stable_mono_win64\\Godot.exe"
+    "godotTools.editorPath.godot4": "c:\\Users\\smrro\\Documents\\Godot\\Godot_v4.2.1-stable_mono_win64\\Godot.exe",
+    "FSharp.suggestGitignore": false
 }
